get All user assignet Office and Tenant SelectItem